--- a/whatscooking/first.ipynb
+++ b/whatscooking/first.ipynb
@@ -2213,7 +2213,7 @@
     "    f += 1\n",
     "    for epoch in range(num_epochs):\n",
     "        train_err = 0\n",
-    "        train_batches = 0\n",
+    "        train_batches = 0.\n",
     "        start_time = time.time()\n",
     "        for batch in iterate_minibatches(X_train, y_train, batchsize, shuffle=True):\n",
     "            inputs, targets = batch\n",
